--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "mongoose": "^6.6.2",
     "multer": "^1.4.5-lts.1",
     "nodemon": "^2.0.20",
-    "pdfkit": "^0.13.0"
+    "pdfkit": "^0.13.0",
+    "socket.io": "^4.5.4"
   }
 }
